--- a/print-label.html
+++ b/print-label.html
@@ -7,7 +7,7 @@
 <title>797 Distillery – Print Barrel Label</title>
 
 <!-- APP VERSION -->
-<meta name="app-version" content="Print Label v1.8.6">
+<meta name="app-version" content="Print Label v1.0.6">
 
 <!-- Header CSS -->
 <link rel="stylesheet" href="header.css?v=1.0.0">
@@ -100,22 +100,24 @@ button:disabled{opacity:.5;cursor:not-allowed}
   gap:22px;              /* slightly more breathing room */
 }
 
-/* PRODUCT LETTER — EXTRA WEIGHT */
+/* PRODUCT LETTER — MAX WEIGHT (PRINT) */
 .lbl-r{
   font-size:120px;
   font-weight:900;
   line-height:0.95;
   min-width:150px;
 
-  letter-spacing:4px;           /* tighter = denser */
-  transform:scaleX(1.15);       /* wider stroke feel */
-  
-  /* optical weight for print */
+  letter-spacing:2px;           /* denser */
+  transform:scaleX(1.18);       /* thicker appearance */
+
+  /* heavy ink simulation */
   text-shadow:
-    0.6px 0   0 #000,
-   -0.6px 0   0 #000,
-    0   0.6px 0 #000,
-    0  -0.6px 0 #000;
+    1px 0   0 #000,
+   -1px 0   0 #000,
+    0   1px 0 #000,
+    0  -1px 0 #000,
+    0.7px 0.7px 0 #000,
+   -0.7px -0.7px 0 #000;
 }
 
 /* RIGHT TEXT BLOCK */
