--- a/print-label.html
+++ b/print-label.html
@@ -268,7 +268,7 @@ button:disabled{opacity:.5;cursor:not-allowed}
   </div>
 </div>
 
-<script>
+<script data-nocache="true">
 const APP_VERSION = "Print Label v1.8.5";
 const BARREL_STORAGE_CSV_URL =
 "https://docs.google.com/spreadsheets/d/e/2PACX-1vSNyLVIgK_UeIZdZQJaGF3IgiqZ68aCG0tydTzszngpgYhu4-HlLXNHotuGPJOA63CKSs-RkZgGtRpt/pub?output=csv";
