--- a/print-label.html
+++ b/print-label.html
@@ -7,7 +7,7 @@
 <title>797 Distillery – Print Barrel Label</title>
 
 <!-- APP VERSION -->
-<meta name="app-version" content="Print Label v1.0.6">
+<meta name="app-version" content="Print Label v1.9.1">
 
 <!-- Header CSS -->
 <link rel="stylesheet" href="header.css?v=1.0.0">
@@ -103,9 +103,10 @@ button:disabled{opacity:.5;cursor:not-allowed}
 /* PRODUCT LETTER — MAXIMUM PRINT WEIGHT */
 .lbl-r{
   font-size:120px;
-  font-weight:900;
+  font-weight:1000;
   line-height:0.95;
   min-width:155px;
+   padding-left:10px;
 
   letter-spacing:1px;
   transform:scaleX(1.22);
