--- a/print-label.html
+++ b/print-label.html
@@ -12,7 +12,7 @@
 <title>797 Distillery – Print Barrel Label</title>
 
 <!-- APP VERSION -->
-<meta name="app-version" content="Print Label v1.9.7">
+<meta name="app-version" content="Print Label v1.9.8">
 
 <!-- Header CSS -->
 <link rel="stylesheet" href="header.css?v=1.0.0">
@@ -136,6 +136,7 @@ button:disabled{opacity:.5;cursor:not-allowed}
   font-size:20px;      /* slightly larger */
   font-weight:900;      /* heavier overall */
   line-height:1.28;
+   transform: translateY(10px);
 }
 
 /* DISTILLERY NAME */
@@ -275,7 +276,7 @@ button:disabled{opacity:.5;cursor:not-allowed}
 </div>
 
 <script data-nocache="true">
-const APP_VERSION = "Print Label v1.9.7";
+const APP_VERSION = "Print Label v1.9.8";
 const BARREL_STORAGE_CSV_URL =
 "https://docs.google.com/spreadsheets/d/e/2PACX-1vSNyLVIgK_UeIZdZQJaGF3IgiqZ68aCG0tydTzszngpgYhu4-HlLXNHotuGPJOA63CKSs-RkZgGtRpt/pub?output=csv";
 
