--- a/print-label.html
+++ b/print-label.html
@@ -12,7 +12,7 @@
 <title>797 Distillery – Print Barrel Label</title>
 
 <!-- APP VERSION -->
-<meta name="app-version" content="Print Label v1.9.8">
+<meta name="app-version" content="Print Label v1.9.9">
 
 <!-- Header CSS -->
 <link rel="stylesheet" href="header.css?v=1.0.0">
@@ -159,13 +159,13 @@ button:disabled{opacity:.5;cursor:not-allowed}
 
 /* DATA */
 .lbl-data{
-  font-size:16px;
+  font-size:16.5px;
   line-height:1.55;
 }
 
 .lbl-data span{
   display:inline-block;
-  width:200px;
+  width:220px;          /* wider label column */
   font-weight:900;
 }
 
@@ -276,7 +276,7 @@ button:disabled{opacity:.5;cursor:not-allowed}
 </div>
 
 <script data-nocache="true">
-const APP_VERSION = "Print Label v1.9.8";
+const APP_VERSION = "Print Label v1.9.9";
 const BARREL_STORAGE_CSV_URL =
 "https://docs.google.com/spreadsheets/d/e/2PACX-1vSNyLVIgK_UeIZdZQJaGF3IgiqZ68aCG0tydTzszngpgYhu4-HlLXNHotuGPJOA63CKSs-RkZgGtRpt/pub?output=csv";
 
