--- a/print-label.html
+++ b/print-label.html
@@ -12,7 +12,7 @@
 <title>797 Distillery – Print Barrel Label</title>
 
 <!-- APP VERSION -->
-<meta name="app-version" content="Print Label v1.9.9">
+<meta name="app-version" content="Print Label v1.9.10">
 
 <!-- Header CSS -->
 <link rel="stylesheet" href="header.css?v=1.0.0">
@@ -162,6 +162,12 @@ button:disabled{opacity:.5;cursor:not-allowed}
   font-size:16.5px;
   line-height:1.55;
 }
+.lbl-data b{
+  font-weight:800;
+}
+.lbl-data div{
+  margin-bottom:2px;
+}
 
 .lbl-data span{
   display:inline-block;
@@ -276,7 +282,7 @@ button:disabled{opacity:.5;cursor:not-allowed}
 </div>
 
 <script data-nocache="true">
-const APP_VERSION = "Print Label v1.9.9";
+const APP_VERSION = "Print Label v1.9.10";
 const BARREL_STORAGE_CSV_URL =
 "https://docs.google.com/spreadsheets/d/e/2PACX-1vSNyLVIgK_UeIZdZQJaGF3IgiqZ68aCG0tydTzszngpgYhu4-HlLXNHotuGPJOA63CKSs-RkZgGtRpt/pub?output=csv";
 
