--- a/print-label.html
+++ b/print-label.html
@@ -12,7 +12,7 @@
 <title>797 Distillery – Print Barrel Label</title>
 
 <!-- APP VERSION -->
-<meta name="app-version" content="Print Label v1.9.12">
+<meta name="app-version" content="Print Label v1.9.13">
 
 <!-- Header CSS -->
 <link rel="stylesheet" href="header.css?v=1.0.0">
@@ -157,18 +157,18 @@ button:disabled{opacity:.5;cursor:not-allowed}
   margin:8px 0;
 }
 
-/* DATA BLOCK — TIGHTENED FOR PRINT */
+/* DATA BLOCK — FINAL PRINT TUNING */
 .lbl-data{
-  font-size:16.5px;
-  line-height:1.35;     /* tighter lines */
+  font-size:18.5px;     /* +2px overall */
+  line-height:1.3;      /* tight but readable */
 }
 
-/* LEFT LABEL COLUMN */
+/* LEFT LABEL COLUMN — EXTRA BOLD */
 .lbl-data span{
   display:inline-block;
   width:230px;
   text-align:right;
-  font-weight:900;
+  font-weight:950;      /* visually heavier (prints like 900+) */
   padding-right:10px;
 }
 
@@ -178,11 +178,10 @@ button:disabled{opacity:.5;cursor:not-allowed}
   word-break:break-word;
 }
 
-/* ROW SPACING — tighter */
+/* NO EXTRA ROW SPACING */
 .lbl-data div{
-  margin-bottom:0;     /* removes extra vertical push */
+  margin-bottom:0;
 }
-
 
 /* LOGO */
 .lbl-crest{text-align:center}
@@ -269,8 +268,6 @@ button:disabled{opacity:.5;cursor:not-allowed}
       <div><span>Barrel Type:</span> <b id="vBarrelType"></b></div>
     </div>
 
-    <div class="lbl-rule"></div>
-
     <div class="lbl-crest">
       <img src="websiteLogoGlass.png" class="crest-img" alt="797 Distillery Logo">
     </div>
@@ -291,7 +288,7 @@ button:disabled{opacity:.5;cursor:not-allowed}
 </div>
 
 <script data-nocache="true">
-const APP_VERSION = "Print Label v1.9.12";
+const APP_VERSION = "Print Label v1.9.13";
 const BARREL_STORAGE_CSV_URL =
 "https://docs.google.com/spreadsheets/d/e/2PACX-1vSNyLVIgK_UeIZdZQJaGF3IgiqZ68aCG0tydTzszngpgYhu4-HlLXNHotuGPJOA63CKSs-RkZgGtRpt/pub?output=csv";
 
