--- a/print-label.html
+++ b/print-label.html
@@ -12,7 +12,7 @@
 <title>797 Distillery – Print Barrel Label</title>
 
 <!-- APP VERSION -->
-<meta name="app-version" content="Print Label v1.9.15">
+<meta name="app-version" content="Print Label v1.9.16">
 
 <!-- Header CSS -->
 <link rel="stylesheet" href="header.css?v=1.0.0">
@@ -163,7 +163,7 @@ button:disabled{opacity:.5;cursor:not-allowed}
   line-height:1.3;      /* tight but readable */
 }
 
-/* LEFT LABEL COLUMN — BOLD BUT READABLE */
+/* LEFT LABEL COLUMN — FINAL PRINT-READABLE BOLD */
 .lbl-data span{
   display:inline-block;
   width:230px;
@@ -171,18 +171,12 @@ button:disabled{opacity:.5;cursor:not-allowed}
   padding-right:10px;
 
   font-weight:900;
+  font-size:19.5px;     /* slightly larger than values */
+  letter-spacing:0.8px; /* real readability */
+
   color:#000;
-
-  letter-spacing:0.6px;   /* restores readability */
-
-  /* controlled ink mass */
-  -webkit-text-stroke: 0.4px #000;
-  text-stroke: 0.4px #000;
-
-  text-shadow:
-    0.4px 0   0 #000,
-   -0.4px 0   0 #000;
 }
+
 
 /* RIGHT VALUE COLUMN */
 .lbl-data b{
@@ -300,7 +294,7 @@ button:disabled{opacity:.5;cursor:not-allowed}
 </div>
 
 <script data-nocache="true">
-const APP_VERSION = "Print Label v1.9.15";
+const APP_VERSION = "Print Label v1.9.16";
 const BARREL_STORAGE_CSV_URL =
 "https://docs.google.com/spreadsheets/d/e/2PACX-1vSNyLVIgK_UeIZdZQJaGF3IgiqZ68aCG0tydTzszngpgYhu4-HlLXNHotuGPJOA63CKSs-RkZgGtRpt/pub?output=csv";
 
