--- a/print-label.html
+++ b/print-label.html
@@ -12,7 +12,7 @@
 <title>797 Distillery – Print Barrel Label</title>
 
 <!-- APP VERSION -->
-<meta name="app-version" content="Print Label v1.9.16">
+<meta name="app-version" content="Print Label v1.9.17">
 
 <!-- Header CSS -->
 <link rel="stylesheet" href="header.css?v=1.0.0">
@@ -163,20 +163,20 @@ button:disabled{opacity:.5;cursor:not-allowed}
   line-height:1.3;      /* tight but readable */
 }
 
-/* LEFT LABEL COLUMN — FINAL PRINT-READABLE BOLD */
+/* LEFT LABEL COLUMN — FINAL BOLD, READABLE */
 .lbl-data span{
   display:inline-block;
   width:230px;
   text-align:right;
   padding-right:10px;
 
+  font-family: "Arial Narrow", "Helvetica Neue Condensed", Arial, sans-serif;
   font-weight:900;
-  font-size:19.5px;     /* slightly larger than values */
-  letter-spacing:0.8px; /* real readability */
+  font-size:18.5px;
+  letter-spacing:1px;
 
   color:#000;
 }
-
 
 /* RIGHT VALUE COLUMN */
 .lbl-data b{
@@ -294,7 +294,7 @@ button:disabled{opacity:.5;cursor:not-allowed}
 </div>
 
 <script data-nocache="true">
-const APP_VERSION = "Print Label v1.9.16";
+const APP_VERSION = "Print Label v1.9.17";
 const BARREL_STORAGE_CSV_URL =
 "https://docs.google.com/spreadsheets/d/e/2PACX-1vSNyLVIgK_UeIZdZQJaGF3IgiqZ68aCG0tydTzszngpgYhu4-HlLXNHotuGPJOA63CKSs-RkZgGtRpt/pub?output=csv";
 
