--- a/print-label.html
+++ b/print-label.html
@@ -12,7 +12,7 @@
 <title>797 Distillery – Print Barrel Label</title>
 
 <!-- APP VERSION -->
-<meta name="app-version" content="Print Label v1.9.17">
+<meta name="app-version" content="Print Label v1.9.18">
 
 <!-- Header CSS -->
 <link rel="stylesheet" href="header.css?v=1.0.0">
@@ -163,17 +163,18 @@ button:disabled{opacity:.5;cursor:not-allowed}
   line-height:1.3;      /* tight but readable */
 }
 
-/* LEFT LABEL COLUMN — FINAL BOLD, READABLE */
+/* LEFT LABEL COLUMN — FINAL, PRINT-PROVEN */
 .lbl-data span{
   display:inline-block;
   width:230px;
   text-align:right;
   padding-right:10px;
 
-  font-family: "Arial Narrow", "Helvetica Neue Condensed", Arial, sans-serif;
   font-weight:900;
   font-size:18.5px;
-  letter-spacing:1px;
+
+  text-transform:uppercase;
+  letter-spacing:1.2px;
 
   color:#000;
 }
@@ -294,7 +295,7 @@ button:disabled{opacity:.5;cursor:not-allowed}
 </div>
 
 <script data-nocache="true">
-const APP_VERSION = "Print Label v1.9.17";
+const APP_VERSION = "Print Label v1.9.18";
 const BARREL_STORAGE_CSV_URL =
 "https://docs.google.com/spreadsheets/d/e/2PACX-1vSNyLVIgK_UeIZdZQJaGF3IgiqZ68aCG0tydTzszngpgYhu4-HlLXNHotuGPJOA63CKSs-RkZgGtRpt/pub?output=csv";
 
