--- a/print-label.html
+++ b/print-label.html
@@ -12,7 +12,7 @@
 <title>797 Distillery – Print Barrel Label</title>
 
 <!-- APP VERSION -->
-<meta name="app-version" content="Print Label v1.9.18">
+<meta name="app-version" content="Print Label v1.9.19">
 
 <!-- Header CSS -->
 <link rel="stylesheet" href="header.css?v=1.0.0">
@@ -269,7 +269,7 @@ button:disabled{opacity:.5;cursor:not-allowed}
       <div><span>Mash Bill:</span> <b id="vMashBill"></b></div>
       <div><span>Product Name:</span> <b id="vSpiritType"></b></div>
       <div><span>Entry Proof:</span> <b id="vEntryProof"></b></div>
-      <div><span>Lot Identification No:</span> <b id="vLotId"></b></div>
+      <div><span>Lot Identification #:</span> <b id="vLotId"></b></div>
       <div><span>RC-G:</span> <b id="vRCG"></b></div>
       <div><span>OPG:</span> <b id="vOPG"></b></div>
       <div><span>Barrel Type:</span> <b id="vBarrelType"></b></div>
@@ -295,7 +295,7 @@ button:disabled{opacity:.5;cursor:not-allowed}
 </div>
 
 <script data-nocache="true">
-const APP_VERSION = "Print Label v1.9.18";
+const APP_VERSION = "Print Label v1.9.19";
 const BARREL_STORAGE_CSV_URL =
 "https://docs.google.com/spreadsheets/d/e/2PACX-1vSNyLVIgK_UeIZdZQJaGF3IgiqZ68aCG0tydTzszngpgYhu4-HlLXNHotuGPJOA63CKSs-RkZgGtRpt/pub?output=csv";
 
