--- a/print-label.html
+++ b/print-label.html
@@ -12,7 +12,7 @@
 <title>797 Distillery – Print Barrel Label</title>
 
 <!-- APP VERSION -->
-<meta name="app-version" content="Print Label v1.9.19">
+<meta name="app-version" content="Print Label v1.9.20">
 
 <!-- Header CSS -->
 <link rel="stylesheet" href="header.css?v=1.0.0">
@@ -163,7 +163,7 @@ button:disabled{opacity:.5;cursor:not-allowed}
   line-height:1.3;      /* tight but readable */
 }
 
-/* LEFT LABEL COLUMN — FINAL, PRINT-PROVEN */
+/* LEFT LABEL COLUMN — FINAL, WRAP-SAFE */
 .lbl-data span{
   display:inline-block;
   width:230px;
@@ -176,8 +176,10 @@ button:disabled{opacity:.5;cursor:not-allowed}
   text-transform:uppercase;
   letter-spacing:1.2px;
 
+  white-space:nowrap;   /* 🔑 PREVENT WRAP */
   color:#000;
 }
+
 
 /* RIGHT VALUE COLUMN */
 .lbl-data b{
@@ -295,7 +297,7 @@ button:disabled{opacity:.5;cursor:not-allowed}
 </div>
 
 <script data-nocache="true">
-const APP_VERSION = "Print Label v1.9.19";
+const APP_VERSION = "Print Label v1.9.20";
 const BARREL_STORAGE_CSV_URL =
 "https://docs.google.com/spreadsheets/d/e/2PACX-1vSNyLVIgK_UeIZdZQJaGF3IgiqZ68aCG0tydTzszngpgYhu4-HlLXNHotuGPJOA63CKSs-RkZgGtRpt/pub?output=csv";
 
