--- a/header.html
+++ b/header.html
@@ -9,7 +9,7 @@
       <div id="page-subheading" class="subheading"></div>
     </div>
 
-    <a href="index.html" class="header-logo-link">
+    <a href="https://darren-chaney.github.io/797-dashboard/barrel-dashboard.html" class="header-logo-link">
       <img
         src="websiteLogoGlassWhiteTrans.png"
         class="header-logo"
