--- a/dashboard.html
+++ b/dashboard.html
@@ -30,14 +30,16 @@
     }
     * { box-sizing: border-box; margin: 0; padding: 0; }
     body {
-      font-family: "Roboto", sans-serif;
-      background: radial-gradient(circle at top left, #1e252f, #05070a);
-      color: var(--text);
-      padding: 20px;
-    }
-
-    .dashboard { max-width: 1300px; margin: auto; }
-    
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+  background: #0f172a;
+  color: var(--text);
+  margin: 0;
+}
+  .dashboard {
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 1.5rem 1rem 3rem;
+}
 
     .grid { display: grid; grid-template-columns: 2fr 1fr; gap: 20px; }
 
