--- a/dashboard.html
+++ b/dashboard.html
@@ -179,7 +179,7 @@
         if (subtitle) subtitle.textContent = PAGE_SUBTITLE;
       });
   </script>
-  <div class="dashboard">
+  <div class="dashboard page-content">
 
     <!-- ==========================
          MAIN GRID: CHART + TILES
