--- a/print-label.html
+++ b/print-label.html
@@ -297,6 +297,9 @@ button:disabled{opacity:.5;cursor:not-allowed}
 
 <script data-nocache="true">
 const APP_VERSION = "Print Label v1.9.21";
+const PAGE_TITLE = "797 Distillery - Print Barrel Label";
+const PAGE_SUBTITLE = "Generate and print barrel identification labels";
+
 const BARREL_STORAGE_CSV_URL =
 "https://docs.google.com/spreadsheets/d/e/2PACX-1vSNyLVIgK_UeIZdZQJaGF3IgiqZ68aCG0tydTzszngpgYhu4-HlLXNHotuGPJOA63CKSs-RkZgGtRpt/pub?output=csv";
 
@@ -314,6 +317,12 @@ versionBadge.textContent = APP_VERSION + " • " + new Date().toLocaleTimeString
 async function loadHeader(){
   const r = await fetch("header.html", { cache:"no-store" });
   headerMount.innerHTML = await r.text();
+
+  const title = document.getElementById("page-title");
+  const subtitle = document.getElementById("page-subtitle");
+
+  if (title) title.textContent = PAGE_TITLE;
+  if (subtitle) subtitle.textContent = PAGE_SUBTITLE;
 }
 
 /* CSV */
