--- a/header.html
+++ b/header.html
@@ -1,34 +1,31 @@
 <!-- ==============================
-     GLOBAL HEADER – LOCKED
+     GLOBAL HEADER – FINAL
      ============================== -->
 
 <div class="header-container">
+
+  <!-- TOP ROW -->
   <div class="header-row">
     <div class="header-titles">
       <h1 id="page-title">797 Distillery</h1>
       <div id="page-subheading" class="subheading"></div>
     </div>
 
-    <a href="https://darren-chaney.github.io/797-dashboard/barrel-dashboard.html" class="header-logo-link">
+    <a href="index.html" class="header-logo-link">
       <img
         src="websiteLogoGlassWhiteTrans.png"
         class="header-logo"
-        alt="797 Distillery Dashboard"
+        alt="797 Distillery Operations"
       />
     </a>
   </div>
 
-  <div class="dashboard-actions">
-    <a href="barrel-entry-test.html" class="action-btn">
-      ➕ New Barrel Entry
-    </a>
+  <!-- MODULE NAV -->
+  <nav class="module-nav">
+    <a href="index.html#products" data-module="products">Products</a>
+    <a href="barrel-dashboard.html" data-module="barrels">Barrels</a>
+    <a href="ferm-dashboard.html" data-module="fermentation">Fermentation</a>
+    <a href="index.html#compliance" data-module="compliance">Compliance</a>
+  </nav>
 
-    <a href="dashboard.html" class="action-btn secondary">
-      🧪 Fermentation Dashboard
-    </a>
-
-    <a href="print-label.html" class="action-btn secondary">
-      🏷️ Print Barrel Label
-    </a>
-  </div>
 </div>
