--- a/barrel-dashboard.html
+++ b/barrel-dashboard.html
@@ -200,9 +200,11 @@
   
 <!-- GLOBAL HEADER -->
 <div id="global-header"></div>
+
 <script>
   const PAGE_TITLE = "Barrel Dashboard";
-  const PAGE_SUBTITLE = "Live view of all barrels from your Google Sheet (Barrel Log).";
+  const PAGE_SUBTITLE =
+    "Live view of all barrels from your Google Sheet (Barrel Log).";
 </script>
 
 <script>
@@ -212,12 +214,16 @@ fetch("header.html")
     document.getElementById("global-header").innerHTML = html;
 
     const title = document.getElementById("page-title");
-    const subtitle = document.getElementById("page-subtitle");
+    const subtitle = document.getElementById("page-subheading");
 
     if (title) title.textContent = PAGE_TITLE;
     if (subtitle) subtitle.textContent = PAGE_SUBTITLE;
+
+    // ✅ SET ACTIVE NAV TAB
+    setActiveModule("barrels");
   });
 </script>
+
   <div class="container">
     
     <!-- ⭐ Stats -->
