--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
   <link rel="stylesheet" href="header.css" />
 
   <style>
+  /* OPS HOME MODULE TUNING */
+  body.ops-home .module {
+    border-width: 2px;
+  }
+
+  body.ops-home .module h2 {
+    font-size: 1.2rem;
+  }
+    
     body {
       margin: 0;
       background: #0f172a;
