--- a/header.html
+++ b/header.html
@@ -24,7 +24,7 @@
   <nav class="module-nav">
     <a href="index.html#products" data-module="products">Products</a>
     <a href="barrel-dashboard.html" data-module="barrels">Barrels</a>
-    <a href="ferm-dashboard.html" data-module="fermentation">Fermentation</a>
+    <a href="dashboard.html" data-module="fermentation">Fermentation</a>
     <a href="index.html#compliance" data-module="compliance">Compliance</a>
   </nav>
 
