--- a/dashboard.html
+++ b/dashboard.html
@@ -158,10 +158,9 @@
   </style>
 </head>
 
-<body>
+<body class="dashboard">
   <!-- GLOBAL HEADER -->
   <div id="global-header"></div>
-
   <script>
     const PAGE_TITLE = "Fermentation Dashboard";
     const PAGE_SUBTITLE =
@@ -173,12 +172,16 @@
         document.getElementById("global-header").innerHTML = html;
 
         const title = document.getElementById("page-title");
-        const subtitle = document.getElementById("page-subtitle");
+        const subtitle = document.getElementById("page-subheading");
 
         if (title) title.textContent = PAGE_TITLE;
         if (subtitle) subtitle.textContent = PAGE_SUBTITLE;
+
+        // ✅ IMPORTANT
+        setActiveModule("fermentation");
       });
   </script>
+
   <div class="dashboard page-content">
 
     <!-- ==========================
