--- a/barrel-dashboard.html
+++ b/barrel-dashboard.html
@@ -193,37 +193,86 @@
   opacity: 0.9;
 }
 
+.barrel-actions {
+  display: flex;
+  gap: 12px;
+  margin: 16px auto 24px auto;
+  max-width: 1200px;
+  padding: 0 20px;
+}
+
+.action-btn {
+  display: inline-flex;
+  align-items: center;
+  gap: 6px;
+  padding: 10px 14px;
+  border-radius: 8px;
+  font-size: 0.95rem;
+  font-weight: 500;
+  text-decoration: none;
+  border: 1px solid #334155;
+}
+
+.action-btn.primary {
+  background: #2563eb;
+  color: #ffffff;
+}
+
+.action-btn.primary:hover {
+  background: #1d4ed8;
+}
+
+.action-btn.secondary {
+  background: #111c33;
+  color: #cbd5e1;
+}
+
+.action-btn.secondary:hover {
+  background: #1e293b;
+}
+
+
   </style>
 </head>
-  
+
 <body class="dashboard">
 
-<!-- GLOBAL HEADER -->
-<div id="global-header"></div>
+  <!-- GLOBAL HEADER -->
+  <div id="global-header"></div>
 
-<script>
-  const PAGE_TITLE = "Barrel Dashboard";
-  const PAGE_SUBTITLE =
-    "Live view of all barrels from your Google Sheet (Barrel Log).";
-</script>
+  <script>
+    const PAGE_TITLE = "Barrel Dashboard";
+    const PAGE_SUBTITLE =
+      "Live view of all barrels from your Google Sheet (Barrel Log).";
 
-<script>
-fetch("header.html")
-  .then(res => res.text())
-  .then(html => {
-    document.getElementById("global-header").innerHTML = html;
+    fetch("header.html", { cache: "no-store" })
+      .then(res => res.text())
+      .then(html => {
+        document.getElementById("global-header").innerHTML = html;
 
-    const title = document.getElementById("page-title");
-    const subtitle = document.getElementById("page-subheading");
+        const title = document.getElementById("page-title");
+        const subtitle = document.getElementById("page-subheading");
 
-    if (title) title.textContent = PAGE_TITLE;
-    if (subtitle) subtitle.textContent = PAGE_SUBTITLE;
+        if (title) title.textContent = PAGE_TITLE;
+        if (subtitle) subtitle.textContent = PAGE_SUBTITLE;
 
-    // ✅ SET ACTIVE NAV TAB
-    setActiveModule("barrels");
-  });
-</script>
+        // ACTIVE NAV TAB
+        setActiveModule("barrels");
+      });
+  </script>
 
+  <!-- BARREL ACTIONS -->
+  <div class="barrel-actions">
+    <a href="barrel-entry.html" class="action-btn primary">
+      ➕ New Barrel Entry
+    </a>
+
+    <a href="print-barrel-label.html" class="action-btn secondary">
+      🏷️ Print Barrel Label
+    </a>
+  </div>
+
+  <!-- DASHBOARD CONTENT -->
   <div class="container">
     
     <!-- ⭐ Stats -->
