--- a/barrel-dashboard.html
+++ b/barrel-dashboard.html
@@ -263,11 +263,11 @@
 
   <!-- BARREL ACTIONS -->
   <div class="barrel-actions">
-    <a href="barrel-entry.html" class="action-btn primary">
+    <a href="barrel-entry-test.html" class="action-btn primary">
       ➕ New Barrel Entry
     </a>
 
-    <a href="print-barrel-label.html" class="action-btn secondary">
+    <a href="print-label.html" class="action-btn secondary">
       🏷️ Print Barrel Label
     </a>
   </div>
