--- a/barrel-dashboard.html
+++ b/barrel-dashboard.html
@@ -204,6 +204,28 @@
 .action-btn {
   display: inline-flex;
   align-items: center;
+  gap: 8px;
+  padding: 10px 14px;
+  border-radius: 8px;
+  font-size: 0.95rem;
+  font-weight: 500;
+  text-decoration: none;
+
+  background: transparent;
+  color: #e5e7eb;
+  border: 1px solid #334155;
+
+  transition: background 0.15s ease, border-color 0.15s ease;
+}
+.action-btn:hover {
+  background: #1e293b;
+  border-color: #475569;
+}
+
+
+.action-btn {
+  display: inline-flex;
+  align-items: center;
   gap: 6px;
   padding: 10px 14px;
   border-radius: 8px;
