--- a/header.html
+++ b/header.html
@@ -22,10 +22,10 @@
 
   <!-- MODULE NAV -->
   <nav class="module-nav">
-    <a href="index.html#products" data-module="products">Products</a>
+    <a href="products.html" data-module="products">Products</a>
     <a href="barrel-dashboard.html" data-module="barrels">Barrels</a>
     <a href="dashboard.html" data-module="fermentation">Fermentation</a>
-    <a href="index.html#compliance" data-module="compliance">Compliance</a>
+    <a href="compliance,html" data-module="compliance">Compliance</a>
   </nav>
 
 </div>
