--- a/recipe-scaling.html
+++ b/recipe-scaling.html
@@ -2,13 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Recipe Scaling</title>
+  <title>Moonshine Recipe Wizard</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- Shared Header CSS -->
   <link rel="stylesheet" href="header.css" />
-
-  <!-- Scaling Engine -->
   <script src="scaler.js"></script>
 
   <style>
@@ -16,17 +13,16 @@
       margin: 0;
       background: #0f172a;
       color: #e5e7eb;
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      font-family: system-ui, sans-serif;
     }
 
     main {
-      max-width: 1000px;
+      max-width: 900px;
       margin: 0 auto;
       padding: 32px 20px;
     }
 
     h1 {
-      font-size: 1.7rem;
       margin-bottom: 6px;
     }
 
@@ -35,63 +31,35 @@
       margin-bottom: 28px;
     }
 
-    .panel {
+    .step {
       background: #111c33;
       border: 1px solid #334155;
       border-radius: 12px;
       padding: 20px;
-      margin-bottom: 24px;
-    }
-
-    .panel h2 {
-      font-size: 1.1rem;
-      margin: 0 0 14px 0;
-    }
-
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 16px;
+      margin-bottom: 20px;
     }
 
     label {
-      display: block;
       font-size: 0.85rem;
       color: #cbd5e1;
+      display: block;
       margin-bottom: 6px;
     }
 
-    select,
-    input {
+    select, input {
       width: 100%;
       padding: 10px;
       border-radius: 8px;
       border: 1px solid #334155;
       background: #0f172a;
       color: #e5e7eb;
-      font-size: 0.95rem;
-    }
-
-    button {
-      margin-top: 16px;
-      padding: 10px 16px;
-      border-radius: 8px;
-      border: 1px solid #475569;
-      background: transparent;
-      color: #e5e7eb;
-      font-size: 0.95rem;
-      cursor: pointer;
-    }
-
-    button:hover {
-      background: #1e293b;
     }
 
     .results {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
       gap: 16px;
-      margin-top: 16px;
+      margin-top: 12px;
     }
 
     .result {
@@ -101,143 +69,129 @@
       padding: 14px;
     }
 
-    .result .label {
+    .label {
       font-size: 0.75rem;
       color: #9ca3af;
-      margin-bottom: 4px;
     }
 
-    .result .value {
-      font-size: 1.2rem;
+    .value {
+      font-size: 1.15rem;
       font-weight: 600;
-      letter-spacing: 0.3px;
-    }
-
-    .muted {
-      color: #9ca3af;
-      font-size: 0.8rem;
-      margin-top: 6px;
     }
   </style>
 </head>
 
 <body>
 
-  <!-- GLOBAL HEADER -->
-  <div id="global-header"></div>
+<div id="global-header"></div>
 
-  <script>
-    const PAGE_TITLE = "Recipe Scaling";
-    const PAGE_SUBTITLE =
-      "Scale approved base recipes by volume and proof.";
+<script>
+  const PAGE_TITLE = "Moonshine Recipe Wizard";
+  const PAGE_SUBTITLE = "Scale approved flavored moonshine recipes";
 
-    fetch("header.html", { cache: "no-store" })
-      .then(res => res.text())
-      .then(html => {
-        document.getElementById("global-header").innerHTML = html;
-
-        const title = document.getElementById("page-title");
-        const subtitle = document.getElementById("page-subheading");
-
-        if (title) title.textContent = PAGE_TITLE;
-        if (subtitle) subtitle.textContent = PAGE_SUBTITLE;
-
-        setActiveModule("products");
-      });
-  </script>
-
-  <main>
-    <h1>Recipe Scaling</h1>
-    <div class="subtitle">
-      Scale approved base recipes to any batch size
-    </div>
-
-    <!-- INPUTS -->
-    <section class="panel">
-      <h2>Inputs</h2>
-
-      <div class="grid">
-        <div>
-          <label for="product">Product</label>
-          <select id="product"></select>
-        </div>
-
-        <div>
-          <label for="volume">Target Volume (gallons)</label>
-          <input id="volume" type="number" step="0.01" value="20" />
-        </div>
-
-        <div>
-          <label for="proof">Target Proof</label>
-          <input id="proof" type="number" step="1" />
-        </div>
-      </div>
-
-      <button onclick="runScale()">Scale Recipe</button>
-    </section>
-
-    <!-- RESULTS -->
-    <section class="panel">
-      <h2>Results</h2>
-
-      <div class="results" id="results">
-        <div class="muted">
-          Enter inputs and click “Scale Recipe”
-        </div>
-      </div>
-    </section>
-  </main>
-
-  <script>
-    const productSelect = document.getElementById("product");
-    const volumeInput = document.getElementById("volume");
-    const proofInput = document.getElementById("proof");
-    const resultsDiv = document.getElementById("results");
-
-    // Populate products
-    Object.values(Scaler.PRODUCTS).forEach(p => {
-      const opt = document.createElement("option");
-      opt.value = p.key;
-      opt.textContent = p.name;
-      opt.dataset.defaultProof = p.defaultTargetProof;
-      productSelect.appendChild(opt);
+  fetch("header.html", { cache: "no-store" })
+    .then(r => r.text())
+    .then(html => {
+      document.getElementById("global-header").innerHTML = html;
+      document.getElementById("page-title").textContent = PAGE_TITLE;
+      document.getElementById("page-subheading").textContent = PAGE_SUBTITLE;
+      setActiveModule("products");
     });
+</script>
 
-    // Set default proof on product change
-    productSelect.addEventListener("change", () => {
-      const selected =
-        productSelect.options[productSelect.selectedIndex];
-      proofInput.value = selected.dataset.defaultProof;
-    });
+<main>
+  <h1>Moonshine Recipe Wizard</h1>
+  <div class="subtitle">Flavored moonshine – fixed 60 proof</div>
 
-    // Init
-    productSelect.dispatchEvent(new Event("change"));
+  <!-- STEP 1 -->
+  <div class="step">
+    <label>Step 1 — Select Flavor</label>
+    <select id="recipe"></select>
+  </div>
 
-    function runScale() {
-      const result = Scaler.scaleRecipe({
-        productKey: productSelect.value,
-        targetVolumeGal: Number(volumeInput.value),
-        targetProof: Number(proofInput.value)
-      });
+  <!-- STEP 2 -->
+  <div class="step">
+    <label>Step 2 — Gallons of 155-Proof Base Spirit</label>
+    <input id="baseGallons" type="number" step="0.01" value="4" />
+  </div>
 
-      resultsDiv.innerHTML = `
-        <div class="result">
-          <div class="label">Alcohol Required</div>
-          <div class="value">${result.alcoholGallons} gal</div>
-        </div>
+  <!-- STEP 3 -->
+  <div class="step">
+    <label>Results</label>
+    <div class="results" id="results"></div>
+  </div>
+</main>
 
-        <div class="result">
-          <div class="label">Water Required</div>
-          <div class="value">${result.waterGallons} gal</div>
-        </div>
-
-        <div class="result">
-          <div class="label">Proof Gallons</div>
-          <div class="value">${result.proofGallons} PG</div>
-        </div>
-      `;
+<script>
+  const MOONSHINE_RECIPES = {
+    apple_pie: {
+      name: "Apple Pie Moonshine",
+      base: { gallons: 4, proof: 155 },
+      finalProof: 60,
+      ingredients: { flavorOz: 32, sugarLb: 8 }
+    },
+    blue_raspberry: {
+      name: "Blue Raspberry Moonshine",
+      base: { gallons: 4, proof: 155 },
+      finalProof: 60,
+      ingredients: { flavorOz: 24, sugarLb: 6 }
     }
-  </script>
+  };
+
+  const recipeSelect = document.getElementById("recipe");
+  const baseInput = document.getElementById("baseGallons");
+  const results = document.getElementById("results");
+
+  Object.entries(MOONSHINE_RECIPES).forEach(([key, r]) => {
+    const opt = document.createElement("option");
+    opt.value = key;
+    opt.textContent = r.name;
+    recipeSelect.appendChild(opt);
+  });
+
+  function runWizard() {
+    const recipe = MOONSHINE_RECIPES[recipeSelect.value];
+    const baseUsed = Number(baseInput.value);
+
+    const multiplier = baseUsed / recipe.base.gallons;
+
+    const scaledFlavor = recipe.ingredients.flavorOz * multiplier;
+    const scaledSugar = recipe.ingredients.sugarLb * multiplier;
+
+    const alcoholPG =
+      baseUsed * (recipe.base.proof / 100);
+
+    const finalVolume =
+      alcoholPG / (recipe.finalProof / 100);
+
+    const waterNeeded =
+      finalVolume - baseUsed;
+
+    results.innerHTML = `
+      <div class="result">
+        <div class="label">Water Required</div>
+        <div class="value">${waterNeeded.toFixed(2)} gal</div>
+      </div>
+      <div class="result">
+        <div class="label">Flavoring</div>
+        <div class="value">${scaledFlavor.toFixed(1)} oz</div>
+      </div>
+      <div class="result">
+        <div class="label">Sugar</div>
+        <div class="value">${scaledSugar.toFixed(2)} lb</div>
+      </div>
+      <div class="result">
+        <div class="label">Final Volume</div>
+        <div class="value">${finalVolume.toFixed(2)} gal</div>
+      </div>
+    `;
+  }
+
+  recipeSelect.addEventListener("change", runWizard);
+  baseInput.addEventListener("input", runWizard);
+
+  runWizard();
+</script>
 
 </body>
 </html>
